# freaxlab

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  vercel.json
backend/: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/api/endpoints/: diagnose.py  health.py
backend/notebooks/: llm_api_examples.ipynb
backend/schemas/: diagnosis.py
backend/services/: ml_service.py
backend/src/: config.py  database.py  db.py  diagnose.py  diagnose_light.py  logger.py  main.py
backend/src/api/: deps.py
backend/src/api/endpoints/: auth.py  body_map.py  chat.py  export.py  history.py
backend/src/schemas/: auth.py  body_map.py  chat.py  history.py
backend/src/services/: auth_service.py  body_map_service.py  chat_service.py  export_service.py  history_service.py  ml_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: AboutProject.tsx  ChatInput.tsx  ChatSidebar.tsx  ChatWindow.tsx  DiagnosisCard.tsx  DiagnosisResults.tsx  DocsSection.tsx  ErrorMessage.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  LanguageSwitcher.tsx  Partners.tsx  SymptomForm.tsx
frontend/src/hooks/: useInView.ts  useSessions.ts
frontend/src/i18n/: I18nContext.tsx  translations.ts
frontend/src/lib/: layout.ts
src/: config.py  models.py
static/: index.html
static/assets/: index-Dt4lcmoO.css  index-EP4_mU4Q.js
