[project]
name = "hack-nu"
version = "0.1.0"
description = "Evaluates solutions on a given dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "ipykernel>=7.2.0",
    "openai>=2.21.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "aiosqlite>=0.20.0",
    "reportlab>=4.2.0",
    "torch>=2.10.0",
    "qdrant-client>=1.17.0",
    "sentence-transformers>=5.2.3",
]
